--- a/app/src/main/res/layout/activity_biodata.xml
+++ b/app/src/main/res/layout/activity_biodata.xml
@@ -306,23 +306,24 @@
             android:layout_marginTop="10dp"
             android:text="Tanggal Lahir" />
 
-        <EditText
+        <TextView
             android:id="@+id/textTanggalLahir"
-            android:layout_width="200dp"
+            android:layout_width="100dp"
             android:layout_height="43dp"
             android:layout_below="@id/textTempatLahir"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="13dp"
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@+id/tanggalLahir"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:hint="Tanggal Lahir"
+            android:textSize="18dp"
             app:layout_constraintStart_toEndOf="@+id/tanggalLahir"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tanggalLahir" />
 
         <Button
             android:id="@+id/button_tgl"
-            android:layout_width="33dp"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/textTempatLahir"
             android:layout_toEndOf="@+id/textTanggalLahir"
