--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -10,7 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:ignore="UselessParent">
 
         <TextView
             android:layout_width="wrap_content"
@@ -18,15 +19,15 @@
             android:layout_gravity="center"
             android:textSize="24sp"
             android:fontFamily="sans-serif"
-            android:text="UBAH PASSWORD"/>
+            android:text="@string/ubah_password"/>
 
         <TextView
             android:id="@+id/txtUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textSize="18dp"
-            android:hint="User"
+            android:textSize="18sp"
+            android:hint="@string/user"
             android:maxLength="10"
             android:padding="8dp" />
 
@@ -35,30 +36,33 @@
             android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password lama"
+            android:hint="@string/password_lama"
             android:inputType="textPassword"
             android:padding="8dp"
-            android:maxLength="10"/>
+            android:maxLength="10"
+            android:importantForAutofill="no" />
 
         <EditText
             android:id="@+id/txtPassBaru"
             android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password baru"
+            android:hint="@string/password_baru"
             android:inputType="textPassword"
             android:padding="8dp"
-            android:maxLength="10"/>
+            android:maxLength="10"
+            android:importantForAutofill="no" />
 
         <EditText
             android:id="@+id/txtKonfirmasiPass"
             android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Konfirmasi password baru"
+            android:hint="@string/konfirmasi_password_baru"
             android:inputType="textPassword"
             android:padding="8dp"
-            android:maxLength="10"/>
+            android:maxLength="10"
+            android:importantForAutofill="no" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -67,14 +71,14 @@
             android:textSize="12sp"
             android:padding="8dp"
             android:fontFamily="sans-serif"
-            android:text="Password terdiri dari kombinasi huruf dan angka, maksimal 10 karakter."/>
+            android:text="@string/password_t"/>
 
         <Button
             android:id="@+id/btnUbahPass"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ubah"/>
+            android:text="@string/ubah"/>
 
     </LinearLayout>
 
