--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -28,8 +28,10 @@
             android:layout_marginTop="8dp"
             android:textSize="18sp"
             android:hint="@string/user"
+            android:inputType="textPersonName"
             android:maxLength="10"
-            android:padding="8dp" />
+            android:padding="8dp"
+            tools:ignore="TextViewEdits" />
 
         <EditText
             android:id="@+id/txtPassLama"
