--- a/app/src/main/res/layout/activity_biodata.xml
+++ b/app/src/main/res/layout/activity_biodata.xml
@@ -397,7 +397,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/status_pegawai" />
 
-        <EditText
+        <Spinner
             android:id="@+id/textStatusPegawai"
             android:layout_width="253dp"
             android:layout_height="43dp"
