--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UbahPassword">
 
     <LinearLayout
@@ -33,6 +34,12 @@
             android:padding="8dp"
             tools:ignore="TextViewEdits" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutPassLama"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorPrimaryDark2">
         <EditText
             android:id="@+id/txtPassLama"
             android:layout_marginTop="8dp"
@@ -43,7 +50,14 @@
             android:padding="8dp"
             android:maxLength="10"
             android:importantForAutofill="no" />
+        </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutPassBaru"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorPrimaryDark2">
         <EditText
             android:id="@+id/txtPassBaru"
             android:layout_marginTop="8dp"
@@ -54,7 +68,14 @@
             android:padding="8dp"
             android:maxLength="10"
             android:importantForAutofill="no" />
+        </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutKonfPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/colorPrimaryDark2">
         <EditText
             android:id="@+id/txtKonfirmasiPass"
             android:layout_marginTop="8dp"
@@ -65,22 +86,16 @@
             android:padding="8dp"
             android:maxLength="10"
             android:importantForAutofill="no" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="12sp"
-            android:padding="8dp"
-            android:fontFamily="sans-serif"
-            android:text="@string/password_t"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnUbahPass"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/ubah"/>
+            android:text="ubah"
+            android:backgroundTint="@color/colorPrimary2"
+            android:textColor="@color/colorText"/>
 
     </LinearLayout>
 
