--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,3 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
+    <color name="colorAccent">#D81B60</color>
+    <color name="colorText">#050505</color>
+    <color name="colorPrimaryDark2">#106991</color>
+    <color name="colorPrimary2">#D30B0B</color>
 </resources>
