--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,5 @@
 <resources>
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar" />
+  <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar" />
   <color name="colorPrimary">#FFFFFF</color>
+
 </resources>
