--- a/app/src/main/res/layout/activity_daftar.xml
+++ b/app/src/main/res/layout/activity_daftar.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".Daftar">
 
     <TextView
         android:id="@+id/fiturHeading"
@@ -12,36 +12,23 @@
         android:layout_height="wrap_content"
         android:background="@color/colorTowny"
         android:padding="8dp"
-        android:text="Home"
+        android:text="Daftar"
         android:textAppearance=
             "@android:style/TextAppearance.DeviceDefault.Large"
         android:textColor="@android:color/white"
         android:textStyle="bold"/>
 
     <LinearLayout
+        android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
         android:layout_below="@id/fiturHeading">
-
-        <Button
-            android:id="@+id/btnBiodata"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/bg_rectangle_button"
-            android:text="Ubah Biodata"/>
-
-        <Button
-            android:id="@+id/btnUbahPassword"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:background="@drawable/bg_rectangle_button"
-            android:text="Ubah Password"/>
+            android:text="Ini Layout Daftar"
+            android:textColor="@color/colorText"
+            android:textSize="30dp"/>
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -55,4 +42,5 @@
         app:itemTextColor="@color/colorWhite"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/nav_items"/>
+
 </RelativeLayout>
