--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background_gradient"
     tools:context=".Login">
 
     <LinearLayout
@@ -15,46 +15,54 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/logoUsd"
+            android:id="@+id/logo"
+            android:src="@drawable/logo"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:visibility="visible"
-            app:srcCompat="@drawable/logo"
-            android:contentDescription="@string/logo" />
+            android:layout_height="100dp"
+            android:layout_marginBottom="30dp" />
 
-        <EditText
-            android:id="@+id/txtUser"
-            android:layout_marginTop="20dp"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/txtUser"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Username"
+                android:padding="8dp"
+                android:background="@drawable/bg_rectangle_edittext"
+                android:textColor="@color/colorText"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/layoutPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/user"
-            android:textColorHint="#80000000"
-            android:padding="8dp"
-            android:background="@drawable/bg_rectangle_edittext"
-            android:textColor="#80000000"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/txtPassword"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password"
-            android:textColorHint="#80000000"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:background="@drawable/bg_rectangle_edittext"
-            android:textColor="#80000000"
-            android:importantForAutofill="no" />
+            android:layout_below="@id/layoutUsername"
+            android:layout_marginTop="5dp"
+            app:passwordToggleEnabled="true">
+            <EditText
+                android:id="@+id/txtPassword"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:background="@drawable/bg_rectangle_edittext"
+                android:textColor="@color/colorText"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#FFF"
-            android:text="@string/log_in"
+            android:textColor="@color/colorText"
+            android:text="LOG IN"
             android:background="@drawable/bg_rectangle_button"/>
 
     </LinearLayout>
