--- a/app/src/main/res/layout/activity_ubah_password.xml
+++ b/app/src/main/res/layout/activity_ubah_password.xml
@@ -1,101 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UbahPassword">
+
+    <TextView
+        android:id="@+id/fiturHeading"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorTowny"
+        android:padding="8dp"
+        android:text="Ubah Password"
+        android:layout_gravity="center"
+        android:textAppearance=
+            "@android:style/TextAppearance.DeviceDefault.Large"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="16dp"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="24sp"
-            android:fontFamily="sans-serif"
-            android:text="@string/ubah_password"/>
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtUser"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:textSize="18sp"
-            android:hint="@string/user"
-            android:inputType="textPersonName"
-            android:maxLength="10"
-            android:padding="8dp"
-            tools:ignore="TextViewEdits" />
+            android:clickable="false"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textSize="18dp"
+            android:padding="8dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layoutPassLama"
+            android:id="@+id/layoutPasslama"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutUsername"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimaryDark2">
-        <EditText
-            android:id="@+id/txtPassLama"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password_lama"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:maxLength="10"
-            android:importantForAutofill="no" />
+            app:passwordToggleTint="@color/colorText">
+
+            <EditText
+                android:id="@+id/txtPassLama"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password lama"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:maxLength="10"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layoutPassBaru"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutUsername"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimaryDark2">
-        <EditText
-            android:id="@+id/txtPassBaru"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/password_baru"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:maxLength="10"
-            android:importantForAutofill="no" />
+            app:passwordToggleTint="@color/colorText">
+
+            <EditText
+                android:id="@+id/txtPassBaru"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password baru"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:maxLength="10"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/layoutKonfPass"
+            android:id="@+id/layoutPassKonf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutUsername"
             app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimaryDark2">
-        <EditText
-            android:id="@+id/txtKonfirmasiPass"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/konfirmasi_password_baru"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:maxLength="10"
-            android:importantForAutofill="no" />
+            app:passwordToggleTint="@color/colorText">
+
+            <EditText
+                android:id="@+id/txtKonfirmasiPass"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Konfirmasi password baru"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:maxLength="10"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/btnUbahPass"
             android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:text="ubah"
-            android:backgroundTint="@color/colorPrimary2"
-            android:textColor="@color/colorText"/>
+            android:text="Ubah"
+            android:background="@drawable/bg_rectangle_button"
+            android:textColor="@color/colorText"
+            android:layout_marginStart="240dp"/>
 
     </LinearLayout>
 
