--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,5 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="splash" parent="Theme.AppCompat.DayNight.NoActionBar"/>
 </resources>
